Remove pkcs11 opens
DSS 5.8 is not using reflection anymore